# block_based_queue

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  converter.py  graph_weakscaling.py  parameter_tuning.py  producer_consumer.py
graphs/ss/: test.gr
relaxed_concurrent_fifo/: CMakeLists.txt  atomic_binary_tree.h  atomic_bit_tree.h  atomic_bitset.h  atomic_bitset_no_epoch.h  benchmark.h  block_based_queue.h  concurrent_fifo.h  config.hpp  cylinder_fifo.hpp  epoch_handling.hpp  lock_fifo.h  main.cpp  relaxed_fifo.h  replay_tree.hpp  thread_pool.cpp  utility.h
relaxed_concurrent_fifo/benchmarks/: benchmark_base.hpp  benchmark_bfs_no_dist.hpp  benchmark_default.hpp  benchmark_empty.hpp  benchmark_fill.hpp  benchmark_graph.hpp  benchmark_graph_multistart.hpp  benchmark_prodcon.hpp  benchmark_quality.hpp
relaxed_concurrent_fifo/benchmarks/providers/: benchmark_provider_base.hpp  benchmark_provider_bbq.hpp  benchmark_provider_generic.hpp  benchmark_provider_other.hpp
relaxed_concurrent_fifo/contenders/2D/: 2Dd-queue_optimized.c  2Dd-queue_optimized.h  2Dd-window_optimized.c  2Dd-window_optimized.h  common.h  d-balanced-queue.c  d-balanced-queue.h  lcrq.c  partial-queue.h  random.h  test.c  utils.h  wrapper.hpp  wrapper_2D.hpp  wrapper_dcbo.hpp
relaxed_concurrent_fifo/contenders/FAAArrayQueue/: FAAArrayQueue.hpp  wrapper.hpp
relaxed_concurrent_fifo/contenders/LCRQ/: HazardPointers.hpp  LinkedRingQueue.hpp  MichaelScottQueue.hpp
relaxed_concurrent_fifo/contenders/common/: HazardPointers.hpp
relaxed_concurrent_fifo/contenders/multififo/: handle.hpp  multififo.hpp  queue_guard.hpp  stick_random.hpp  stick_random_symmetric.hpp  stick_swap.hpp  timestamp.cpp
relaxed_concurrent_fifo/contenders/multififo/util/: graph.hpp  graph.portable.cpp  graph.unix.cpp
relaxed_concurrent_fifo/contenders/scal/: boundedsize_kfifo.h  scal_wrapper.h
relaxed_concurrent_fifo/contenders/scal/util/: atomic_value_new.h
scripts/: graph_weakscaling.py  master.py  run_all.py  template.tex
scripts/debug_plotting/: plot.py  plot_tuning.py
scripts/misc/: fill_empty_ratio.py  quality_distribution.py
scripts/plotting/: plot_tuning.py
scripts/raw/: fifo-bfs-test.gr-0-2025-07-21T18-41-16.csv
